--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </h5>
                 <div class="row">
                     <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
-                        <form class="form-inline" role="form">
+                        <form action="//learnano.us11.list-manage.com/subscribe/post?u=ba4817405688b331d9b09112d&amp;id=a1100c27d0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>>
                           <div class="form-group">
                             <label class="sr-only" for="exampleInputEmail2">Email address</label>
                             <input type="email" class="form-control transparent" placeholder="Your email here...">
